--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "Assignment3",
+  "name": "assignment3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +15,6 @@
     "dotenv": "^16.4.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.2"
   }
 }
