--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "devStart": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,9 +13,17 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2"
+    "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.1.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "util": "^0.12.5"
   }
 }
