--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "i18next": "^23.10.0",
+    "i18next-http-middleware": "^3.5.0",
+    "i18next-node-fs-backend": "^2.1.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
